--- a/src/style.css
+++ b/src/style.css
@@ -2,19 +2,27 @@ html,
 body {
 	height: 100vh;
 	width: 100%;
-	font-size: 14px;
 }
 
 body {
 	margin: 0;
+	font-size: 1.5rem;
+}
+
+input,
+select,
+button {
+	font-size: 1.5rem;
+	border: none;
+	border-radius: 3rem;
 }
 
 #app {
 	height: 100%;
 	width: 100%;
-	max-width: 750px;
+	max-width: 1024px;
 	margin: 0 auto;
-	background-color: #f9f9f9;
+	background-color: #ffffff;
 }
 
 /* 识字工具样式 */
@@ -25,13 +33,13 @@ body {
 	font-family: sans-serif, "Microsoft YaHei", Arial;
 }
 
-.app-header {
-	background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+/* .app-header {
+	background: linear-gradient(135deg, #154286 0%, #0066AE 100%);
 	color: white;
 	text-align: center;
 	padding: 15px;
 	box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-}
+} */
 
 .app-header h1 {
 	margin: 0;
@@ -39,120 +47,91 @@ body {
 }
 
 .category-selector {
-	padding: 10px 15px;
-	background: #f0f0f0;
+	padding: 0.5em;
+	background: linear-gradient(135deg, #154286 0%, #0066ae 100%);
+	color: white;
 }
 
 #category-select {
-	width: 150px;
-	padding: 5px;
+	width: 10em;
+	padding: 0.5em;
 	border: none;
 	outline: none;
+	background-color: rgba(0, 101, 174, 0.65);
+	color: #ffffff;
 }
 
 .app-main {
-	flex: 1;
-	padding: 20px;
-	overflow-y: auto;
+	padding: 15px;
 }
 
 .character-card {
-	background: white;
-	border-radius: 20px;
-	padding: 20px;
+	background: #154286;
+	border-radius: 1em;
+	padding: 1em;
 	text-align: center;
-	box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-	margin-bottom: 20px;
 	position: relative;
+	color: #fff;
 }
 
 .character-display {
-	font-size: 6rem;
-	color: #333;
-	font-weight: bold;
+	font-size: 10rem;
 	line-height: 1;
-}
-
-.character-hint {
-	font-size: 1rem;
-	color: #888;
-	margin-top: 10px;
-	font-weight: normal;
-	display: none;
 }
 
 .character-info {
 	margin: 20px 0;
 	display: flex;
 	justify-content: space-around;
-	color: #777;
+	gap: 10px;
+	opacity: 0.5;
 }
 
-.character-info div {
-	margin: 10px 0;
-	font-size: 1.2rem;
-	color: #555;
+.character-info > div {
+	text-align: center;
+	width: 40%;
 }
 
 .sound-buttons {
 	display: flex;
-	gap: 10px;
+	gap: 1rem;
 	align-items: center;
 	justify-content: center;
 }
 
-.meaning-btn,
 .sound-btn,
 .learn-btn {
 	color: white;
 	border: none;
-	height: 40px;
-	width: 140px;
-	font-size: 1rem;
-	border-radius: 50px;
 	cursor: pointer;
 	transition: all 0.3s;
+	line-height: 2.5em;
+	font-size: 1.4rem;
+}
+
+.sound-btn:hover,
+.learn-btn:hover {
+	transform: scale(1.05);
 }
 
 .sound-btn {
-	background: #4caf50;
+	background: #97dc41;
+	width: 12em;
 }
-.sound-btn:hover {
-	background: #45a049;
-	transform: scale(1.05);
-}
-
-.meaning-btn {
-	background: #ff9800;
-}
-
-.meaning-btn:hover {
-	background: #f57c00;
-	transform: scale(1.05);
-}
-
 .learn-btn {
-	background: #9c27b0;
-}
-
-.learn-btn:hover {
-	background: #7b1fa2;
-	transform: scale(1.05);
+	background: #0066ae;
+	width: 9em;
 }
 
 .learn-btn.learned {
-	background: #607d8b;
-}
-
-.learn-btn.learned:hover {
-	background: #455a64;
+	background: #f78d1f;
 }
 
 .learned-mark {
 	position: absolute;
 	top: 10px;
 	right: 10px;
-	color: #4caf50;
+	color: rgba(247, 143, 31, 1);
 	font-size: 2rem;
 	font-weight: bold;
 }
@@ -161,18 +140,16 @@ body {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	margin: 20px 0;
+	padding: 15px;
 }
 
 .nav-btn {
-	background: #2196f3;
+	background: #27a051;
 	color: white;
-	border: none;
-	height: 40px;
-	width: 120px;
-	border-radius: 50px;
+	height: 4rem;
+	line-height: 2em;
+	width: 11rem;
 	cursor: pointer;
-	font-size: 1rem;
 	transition: all 0.3s;
 }
 
@@ -188,36 +165,30 @@ body {
 }
 
 .counter {
-	font-size: 1.1rem;
-	color: #666;
-	font-weight: bold;
-}
-
-.app-footer {
-	padding: 15px;
-	background: #f0f0f0;
-	max-height: 30vh;
-	overflow-y: auto;
+	color: #999;
 }
 
 .characters-preview {
+	flex: 1;
 	display: flex;
 	justify-content: center;
 	flex-wrap: wrap;
-	gap: 10px;
+	gap: 1rem;
+	overflow-y: auto;
+	padding: 15px;
+	min-height: 8em;
 }
 
 .char-thumb {
-	width: 50px;
-	height: 50px;
+	width: 4rem;
+	height: 4rem;
+	line-height: 4rem;
 	background: white;
-	border-radius: 10px;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	font-size: 1.5rem;
+	border-radius: 0.5rem;
+	text-align: center;
+	font-size: 2.2rem;
 	cursor: pointer;
-	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
 	transition: all 0.3s;
 }
 
@@ -227,25 +198,18 @@ body {
 }
 
 .char-thumb.active {
-	background: #2196f3;
+	background: #154286;
 	color: white;
 	transform: scale(1.1);
 }
 
 .learnedThumb {
-	/* outline: 1px solid #4caf50; */
-	background-color: rgba(76, 175, 79, 0.2);
+	background-color: rgba(247, 143, 31, 0.2);
 }
 
 .learnedThumb.active {
-	background-color: #4caf50;
+	background-color: rgba(247, 143, 31, 1);
 	color: #fff;
-}
-
-.characters-total {
-	text-align: center;
-	margin: 20px;
-	color: #999999;
 }
 
 /* 响应式设计 */
