--- a/src/style.css
+++ b/src/style.css
@@ -12,7 +12,7 @@ body {
 input,
 select,
 button {
-	font-size: 1.5rem;
+	font-size: 1.3rem;
 	border: none;
 	border-radius: 3rem;
 }
@@ -105,8 +105,8 @@ button {
 	border: none;
 	cursor: pointer;
 	transition: all 0.3s;
-	line-height: 2.5em;
-	font-size: 1.4rem;
+	line-height: 2.2em;
+	font-size: 1.2rem;
 }
 
 .sound-btn:hover,
@@ -116,11 +116,11 @@ button {
 
 .sound-btn {
 	background: #97dc41;
-	width: 12em;
+	width: 10em;
 }
 .learn-btn {
 	background: #0066ae;
-	width: 9em;
+	width: 10em;
 }
 
 .learn-btn.learned {
@@ -140,22 +140,17 @@ button {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	padding: 15px;
+	padding: 0.5rem;
 }
 
 .nav-btn {
 	background: #27a051;
 	color: white;
-	height: 4rem;
+	height: 3.6rem;
 	line-height: 2em;
 	width: 11rem;
 	cursor: pointer;
 	transition: all 0.3s;
-}
-
-.nav-btn:hover {
-	background: #1976d2;
-	transform: translateY(-2px);
 }
 
 .nav-btn:disabled {
@@ -175,18 +170,18 @@ button {
 	flex-wrap: wrap;
 	gap: 1rem;
 	overflow-y: auto;
-	padding: 15px;
+	padding: 0.5rem;
 	min-height: 8em;
 }
 
 .char-thumb {
-	width: 4rem;
-	height: 4rem;
+	width: 3.5rem;
+	height: 3.5rem;
 	line-height: 4rem;
 	background: white;
 	border-radius: 0.5rem;
 	text-align: center;
-	font-size: 2.2rem;
+	font-size: 2rem;
 	cursor: pointer;
 	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
 	transition: all 0.3s;
