--- a/src/style.css
+++ b/src/style.css
@@ -62,7 +62,7 @@ button {
 }
 
 .app-main {
-	padding: 15px;
+	padding: 0.5rem;
 }
 
 .character-card {
@@ -75,15 +75,15 @@ button {
 }
 
 .character-display {
-	font-size: 10rem;
+	font-size: 8rem;
 	line-height: 1;
 }
 
 .character-info {
-	margin: 20px 0;
+	margin: 1rem 0;
 	display: flex;
 	justify-content: space-around;
-	gap: 10px;
+	gap: 0.5rem;
 	opacity: 0.5;
 }
 
@@ -129,8 +129,8 @@ button {
 
 .learned-mark {
 	position: absolute;
-	top: 10px;
-	right: 10px;
+	top: 0.5rem;
+	right: 0.5rem;
 	color: rgba(247, 143, 31, 1);
 	font-size: 2rem;
 	font-weight: bold;
