--- a/src/style.css
+++ b/src/style.css
@@ -168,16 +168,16 @@ button {
 	display: flex;
 	justify-content: center;
 	flex-wrap: wrap;
-	gap: 0.6;
+	gap: 0.5rem;
 	overflow-y: auto;
 	padding: 0.5rem;
 	min-height: 8em;
 }
 
 .char-thumb {
-	width: 3.2rem;
-	height: 3.2rem;
-	line-height: 3.2rem;
+	width: 3rem;
+	height: 3rem;
+	line-height: 3rem;
 	background: white;
 	border-radius: 0.5rem;
 	text-align: center;
