--- a/src/style.css
+++ b/src/style.css
@@ -6,13 +6,13 @@ body {
 
 body {
 	margin: 0;
-	font-size: 1.5rem;
+	font-size: 1.2rem;
 }
 
 input,
 select,
 button {
-	font-size: 1.3rem;
+	font-size: 1.2rem;
 	border: none;
 	border-radius: 3rem;
 }
@@ -41,10 +41,10 @@ button {
 	box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 } */
 
-.app-header h1 {
+/* .app-header h1 {
 	margin: 0;
 	font-size: 1.5rem;
-}
+} */
 
 .category-selector {
 	padding: 0.5em;
@@ -75,7 +75,7 @@ button {
 }
 
 .character-display {
-	font-size: 8rem;
+	font-size: 6rem;
 	line-height: 1;
 }
 
@@ -106,21 +106,19 @@ button {
 	cursor: pointer;
 	transition: all 0.3s;
 	line-height: 2.2em;
-	font-size: 1.2rem;
 }
 
 .sound-btn:hover,
 .learn-btn:hover {
 	transform: scale(1.05);
+	width: 9em;
 }
 
 .sound-btn {
 	background: #97dc41;
-	width: 10em;
 }
 .learn-btn {
 	background: #0066ae;
-	width: 10em;
 }
 
 .learn-btn.learned {
@@ -146,7 +144,7 @@ button {
 .nav-btn {
 	background: #27a051;
 	color: white;
-	height: 3.2rem;
+	height: 3rem;
 	line-height: 2em;
 	width: 12rem;
 	cursor: pointer;
@@ -175,13 +173,13 @@ button {
 }
 
 .char-thumb {
-	width: 3rem;
-	height: 3rem;
-	line-height: 3rem;
+	width: 2.5rem;
+	height: 2.5rem;
+	line-height: 2.5rem;
 	background: white;
 	border-radius: 0.5rem;
 	text-align: center;
-	font-size: 2rem;
+	font-size: 1.5rem;
 	cursor: pointer;
 	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
 	transition: all 0.3s;
